# panda-desktop

./: .gitignore  README.md  ackage-lock.json  eslint.config.js  index.html  package-lock.json  package.json  panel.html  tsconfig.app.json  vite.config.ts
.github/workflows/: windows-build.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  PRD.md  ROADMAP.md  STAGE1_REPORT.md  TEST_PLAN.md
scripts/: build-windows-installer.ps1
src/: panel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/data/: pandas.json
src/features/pet/: PetWindow.tsx  sound.ts
src/features/profile/: PanelWindow.test.tsx  PanelWindow.tsx
src/services/: tauri.ts
src/store/: settings.test.ts  settings.ts
src/styles/: global.css
src/types/: panda.ts
