[package]
name = "panda-island"
version = "0.1.1"
description = "Panda Island Windows desktop pet"
authors = []
edition = "2021"

[lib]
name = "panda_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
